--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 <div class="label">生年月日</div>
 <div class="datetime-wrapper" style="text-align: center;">
     <span class="placeholder" id="placeholder1">⇩タップして日時を入力⇩</span>
-    <input type="datetime-local" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+    <input type="datetime-local" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日時を入力" onchange="updateBirthDate()">
     <span class="datetime-placeholder">タップして日時を入力</span>
 </div>
 
