--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
 <div class="label">生年月日</div>
 <div class="datetime-wrapper" style="text-align: center;">
     <span class="placeholder" id="placeholder1">⇩タップして日時を入力⇩</span>
-    <input type="datetime-local" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日時を入力" onchange="updateBirthDate()">
-    <span class="datetime-placeholder">タップして日時を入力</span>
+    <input type="date" id="birthDate" class="datetime-input" placeholder=" " aria-label="タップして生年月日を入力">
+    <span class="datetime-placeholder">タップして生年月日を入力</span>
 </div>
 
         <div class="label">ご来店回数※必須</div>
@@ -753,6 +753,7 @@ function updateBirthDate() {
 function submitForm() {
     const formData = {
         name: document.getElementById('name').value.trim(),
+        birthDate = document.getElementById('birthDate').value;,
         phone: document.getElementById('phone').value.trim(),
         visitCount: visitCount,
         selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null,
@@ -780,7 +781,7 @@ function submitForm() {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}${formData.dates[1]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n生年月日：${formattedBirthDate}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}${formData.dates[1]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
