--- a/index.html
+++ b/index.html
@@ -274,51 +274,83 @@
 
 <body>
     <div class="container">
-        <h1>Style Lily<br>予約フォーム</h1>
+        <h1>eyelash salon Mimi<br>予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
         <div class="label">電話番号※必須</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <div class="label">メールアドレスの※必須</div>
-        <input type="text" id="mail" placeholder="メールアドレスを入力してください">
-
-        <div class="label">ご来店回数</div>
+        <div class="label">ご来店回数※必須</div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
         <div class="label">メニューをお選びください</div>
-        <div id="treatment-text" style="margin-bottom: 20px;"></div>
-        <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">ベーシックプラン</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">マタニティプラン</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">ウェディングプラン</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">キッズバースデープラン</button>
-        </div>
-        <div class="highlight-background">
-            <span class="highlight-text">オプション</span>
-        </div>
-        <div class="irradiations">
-            <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">新婦ヘアセット6600円</button>
-            <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">新郎ヘアセット5500円</button>
-            <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">フルメイク5500円</button>
-            <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（ウェディングドレス）11000円</button>
-            <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（メンズ衣装）5500円</button>
-            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">衣装追加レンタル（マタニティドレス）5500円</button>
-            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">花の装飾追加レンタル5500円</button>
-            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">人数追加（5名以上希望の方一人につき）1100円</button>
-            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（10分）1100円</button>
-            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（20分）2200円</button>
-            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（30分）3300円</button>
-            <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（40分）4400円</button>
-            <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（50分）5500円</button>
-            <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">時間追加（60分）6600円</button>
+        <div class="menu-sections">
+            <button type="button" onclick="showMenu('male')">マツエク</button>
+            <button type="button" onclick="showMenu('female')">ラッシュリフト</button>
+            <button type="button" onclick="showMenu('whitening')">ハリウッドブロウリフト</button>
+            <button type="button" onclick="showMenu('fice')">フェイシャルワックス</button>
         </div>
 
-        <div class="label">希望日時</div>
+        <div id="treatment-text" style="margin-bottom: 20px;"></div>
+
+        <div id="male" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆マツエク◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】デザインキープラッシュ80本~100本</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】デザインキープラッシュ120本~140本</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】デザインキープラッシュ80本、100本、120本リペア</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】デザインキープラッシュ140本リペア</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">下まつ毛エクステ</button>
+            </div>
+        </div>
+
+        <div id="female" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆ラッシュリフト◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト上のみをご希望の方</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト上下のみをご希望の方</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト上のみをご希望の方</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト上下のみをご希望の方</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト&ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト&ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト上下&ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト上下&ハリウッドブロウリフト</button>
+            </div>
+        </div>
+
+        <div id="whitening" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆ハリウッドブロウリフト◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト &ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト &ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト上下&ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト上下&ハリウッドブロウリフト</button>
+            </div>
+        </div>
+
+        <div id="fice" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆ハリウッドブロウリフト◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">フェイシャルワックス</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">部分フェイシャルワックス</button>
+            </div>
+        </div>
+
+        <div class="label">希望日時<br>（メニュー選択後に選択ください）</div>
         <div class="calendar-container">
             <div class="week-button-container">
                 <button class="week-button" onclick="previousWeek()">前の週</button>
@@ -392,29 +424,33 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            '新婦ヘアセット6600円': 40,
-            '新郎ヘアセット5500円': 20,
-            'フルメイク5500円': 40,
-            '衣装追加レンタル（ウェディングドレス）11000円': 15,
-            '衣装追加レンタル（メンズ衣装）5500円': 15,
-            '衣装追加レンタル（マタニティドレス）5500円': 15,
-            '花の装飾追加レンタル5500円': 0,
-            '人数追加（5名以上希望の方一人につき）1100円': 0,
-            '時間追加（10分）1100円': 10,
-            '時間追加（20分）2200円': 20,
-            '時間追加（30分）3300円': 30,
-            '時間追加（40分）4400円': 40,
-            '時間追加（50分）5500円': 50,
-            '時間追加（60分）6600円': 60
+            '美白パック〈30分〉': 0
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'ベーシックプラン': 90,
-            'マタニティプラン': 120,
-            'ウェディングプラン': 240,
-            'キッズバースデープラン': 120
+            '【ご新規様】デザインキープラッシュ80本~100本': 90,
+            '【ご新規様】デザインキープラッシュ120本~140本': 120,
+            '【再来】デザインキープラッシュ80本、100本、120本リペア': 90,
+            '【再来】デザインキープラッシュ140本リペア': 120,
+            '下まつ毛エクステ': 30,
+            '【ご新規様】ラッシュリフト上のみをご希望の方': 60,
+            '【ご新規様】ラッシュリフト上下のみをご希望の方': 90,
+            '【再来】ラッシュリフト上のみをご希望の方': 60,
+            '【再来】ラッシュリフト上下のみをご希望の方': 90,
+            '【ご新規様】ラッシュリフト&ハリウッドブロウリフト': 90,
+            '【再来】ラッシュリフト&ハリウッドブロウリフト': 90,
+            '【ご新規様】ラッシュリフト上下&ハリウッドブロウリフト': 120,
+            '【再来】ラッシュリフト上下&ハリウッドブロウリフト': 120,
+            '【ご新規様】ハリウッドブロウリフト': 60,
+            '【再来】ハリウッドブロウリフト': 60,
+            '【ご新規様】ラッシュリフト &ハリウッドブロウリフト': 90,
+            '【再来】ラッシュリフト &ハリウッドブロウリフト': 90,
+            '【ご新規様】ラッシュリフト上下&ハリウッドブロウリフト': 120,
+            '【再来】ラッシュリフト上下&ハリウッドブロウリフト': 120,
+            'フェイシャルワックス': 60,
+            '部分フェイシャルワックス': 30
         };
 
 
@@ -456,7 +492,7 @@
         <hr>
         <p>${selectedSymptomText}</p>
         <hr>
-        <p>${irradiationsText}</p>
+        <p>${totalTimeText}</p>
         <hr>
         <p>${selectedDateText}</p>
         <hr>
@@ -589,7 +625,6 @@
             updateDisplayInfo();
         }
 
-
         function updateTotalAmount() {
             totalAmount = menuPrice + optionsPrice; // オプションの価格も含める
             updateDisplayInfo(); // 表示を更新
@@ -611,6 +646,39 @@
 
             // カレンダーを更新するために取得する日付を渡す
             fetchAvailability(currentDate);
+        }
+
+        function showMenu(menu) {
+            // すべてのメニューボタンの選択状態をリセット
+            document.querySelectorAll('.menu-sections button').forEach(button => {
+                button.classList.remove('active');
+            });
+
+            // 選択されたメニューセクションを表示
+            document.querySelectorAll('.menu-section').forEach(section => {
+                section.classList.remove('active');
+                section.querySelectorAll('button').forEach(btn => btn.classList.remove('active'));
+            });
+
+            // 対応するメニューボタンを選択状態にする
+            document.querySelectorAll('.menu-sections button').forEach(button => {
+                if (button.getAttribute('onclick') === `showMenu('${menu}')`) {
+                    button.classList.add('active');
+                }
+            });
+
+            // 選択されたメニューセクションを表示
+            document.getElementById(menu).classList.add('active');
+
+            // メニューとオプションをリセット
+            selectedSymptom = '';      // メニューのリセット
+            irradiationsCount = '';    // オプションのリセット
+            menuPrice = 0;             // メニューの価格リセット
+            optionsPrice = 0;          // オプションの価格リセット
+            totalAmount = 0;           // 合計金額リセット
+
+            // 表示を更新
+            updateDisplayInfo();
         }
 
         function selectDate(cell) {
@@ -642,7 +710,6 @@
     const formData = {
         name: document.getElementById('name').value.trim(),
         phone: document.getElementById('phone').value.trim(),
-        mail: document.getElementById('mail').value.trim(),
         visitCount: visitCount,
         selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
         irradiationsCount: irradiationsCount,
@@ -671,20 +738,20 @@
         return;
     }
 
-            // LINEトークにメッセージを送信
-            liff.sendMessages([{
-                type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nメールアドレス：${formData.mail}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
-            }]).then(() => {
-                /* メッセージ送信成功時の処理 */
-                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
-                /* LIFFウィンドウを閉じる */
-                liff.closeWindow();
-            }).catch((err) => {
-                /* メッセージ送信失敗時の処理 */
-                console.error('メッセージの送信に失敗しました', err);
-            });
-        }
+    // LINEトークにメッセージを送信
+    liff.sendMessages([{
+        type: 'text',
+        text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+    }]).then(() => {
+        /* メッセージ送信成功時の処理 */
+        alert('当日キャンセルは無いようにお願いいたします。');
+        /* LIFFウィンドウを閉じる */
+        liff.closeWindow();
+    }).catch((err) => {
+        /* メッセージ送信失敗時の処理 */
+        console.error('メッセージの送信に失敗しました', err);
+    });
+}
 
         function formatDate(dateStr) {
             if (!dateStr) return '';
@@ -706,7 +773,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbyJjFF16v_y5qndj5gJN5CXJO_hCRMxjfO7ykSsRoCu89VxkUz6a_yqM3ynLc1dT1jL/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbwCxnJaxGZ46c3TnnesuZcD_zuxuVoSHoDHo5MxkRzChcK5vZDwBs4HstzkXO-KLyuDYA/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -738,18 +805,12 @@
             const calendar = document.getElementById('calendar1');
             const table = calendar.querySelector('table tbody');
 
-const times = [
-    '10:30',
-    '11:00', '11:30',
-    '12:00', '12:30',
-    '13:00', '13:30',
-    '14:00', '14:30',
-    '15:00', '15:30',
-    '16:00', '16:30',
-    '17:00', '17:30',
-    '18:00', '18:30',
-    '19:00', '19:30', '20:00'
-];
+            const times = [
+                '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
+                '12:00', '12:30', '13:00', '13:30',
+                '14:00', '14:30', '15:00', '15:30',
+                '16:00', '16:30'
+            ];
 
             if (table.rows.length === 0) {
                 for (const time of times) {
@@ -825,29 +886,18 @@ if (slotEnd.getDate() !== slotStart.getDate()) {
     continue;
 }
 
-// 19:30以降に終了する予約を不可にする (19:30は可)
-if (slotEnd.getHours() === 19 && slotEnd.getMinutes() > 30) {
+// 18時以降に終了する予約を不可にする (17:30は可)
+if (slotEnd.getHours() === 16 && slotEnd.getMinutes() > 30) {
     cell.textContent = '✕';
     cell.classList.add('unavailable');
     continue;
-} else if (slotEnd.getHours() > 19) {
-    cell.textContent = '✕';
-    cell.classList.add('unavailable');
-    continue;
-}
-
-// 現在時刻が09:00以降かどうかを判定
-const nineAM = new Date();
-nineAM.setHours(9, 0, 0, 0); // 今日の09:00を設定
-const isAfterNineAM = now >= nineAM;
-
-// 09:00以降であればその日のセルをすべて×に設定
-if (isAfterNineAM && day.toDateString() === now.toDateString()) {
+} else if (slotEnd.getHours() > 16) {
     cell.textContent = '✕';
     cell.classList.add('unavailable');
     continue;
 }
 
+// ここで終了時間を使った条件処理を行う
 // 例えば、リアルタイムで既に過ぎた時間帯は×にする
 if (slotStart < now) {
     cell.textContent = '✕';
