--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 <body>
     <div class="container">
-        <h1>eyelash salon Mimi<br>予約フォーム</h1>
+        <h1>美容室 はなぐし<br>予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -289,64 +289,72 @@
 
         <div class="label">メニューをお選びください</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">マツエク</button>
-            <button type="button" onclick="showMenu('female')">ラッシュリフト</button>
-            <button type="button" onclick="showMenu('whitening')">ハリウッドブロウリフト</button>
-            <button type="button" onclick="showMenu('fice')">フェイシャルワックス</button>
+            <button type="button" onclick="showMenu('set')">セットメニュー</button>
+            <button type="button" onclick="showMenu('color')">カラーメニュー</button>
+            <button type="button" onclick="showMenu('perm')">パーマメニュー</button>
+            <button type="button" onclick="showMenu('Sukumo')">宿毛矯正メニュー</button>
+            <button type="button" onclick="showMenu('treatment')">トリートメントメニュー</button>
+            <button type="button" onclick="showMenu('cut')">カットメニュー</button>
+            <button type="button" onclick="showMenu('headspa')">ヘッドスパ</button>
+            <button type="button" onclick="showMenu('shampoo')">シャンプー・ブロウ</button>
         </div>
 
         <div id="treatment-text" style="margin-bottom: 20px;"></div>
 
-        <div id="male" class="menu-section">
+        <div id="set" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆マツエク◆</span>
+                <span class="highlight-text">◆ブライダルコース◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】デザインキープラッシュ80本~100本</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】デザインキープラッシュ120本~140本</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】デザインキープラッシュ80本、100本、120本リペア</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】デザインキープラッシュ140本リペア</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">下まつ毛エクステ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">オーガニックカラー＋カット<br>（ケアトリートメント・スタイリング込）</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">オーガニックカラー<br>＋<br>カット<br>＋<br>髪質改善4stepトリートメント<br>（ケアトリートメント・スタイリング込）</button>
             </div>
         </div>
 
         <div id="female" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ラッシュリフト◆</span>
+                <span class="highlight-text">◆シェービングコース◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト上のみをご希望の方</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト上下のみをご希望の方</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト上のみをご希望の方</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト上下のみをご希望の方</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト&ハリウッドブロウリフト</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト&ハリウッドブロウリフト</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト上下&ハリウッドブロウリフト</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト上下&ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">リラックスコース〈60分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ベーシックコース〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">スピードコース〈90分〉</button>
+            </div>
+            <div class="highlight-background">
+                <span class="highlight-text">シェービングコース：オプション</span>
+            </div>
+            <div class="irradiations">
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈30分〉</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中</button>
+                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)〈30分〉</button>
+                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈30分〉</button>
+                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕〈30分〉</button>
+                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈30分〉</button>
+                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈30分〉</button>
             </div>
         </div>
 
         <div id="whitening" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ハリウッドブロウリフト◆</span>
+                <span class="highlight-text">◆マッサージコース◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ハリウッドブロウリフト</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ハリウッドブロウリフト</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト &ハリウッドブロウリフト</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト &ハリウッドブロウリフト</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【ご新規様】ラッシュリフト上下&ハリウッドブロウリフト</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">【再来】ラッシュリフト上下&ハリウッドブロウリフト</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">リラックスマッサージ〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">ベーシックマッサージ〈30分〉</button>
             </div>
-        </div>
-
-        <div id="fice" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ハリウッドブロウリフト◆</span>
+                <span class="highlight-text">マッサージコース：オプション</span>
             </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">フェイシャルワックス</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">部分フェイシャルワックス</button>
+            <div class="irradiations">
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈30分〉</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中</button>
+                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)〈30分〉</button>
+                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈30分〉</button>
+                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕〈30分〉</button>
+                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈30分〉</button>
+                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈30分〉</button>
             </div>
         </div>
 
@@ -424,33 +432,22 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            '美白パック〈30分〉': 0
+            '眉カット〈30分〉': 30,
+            '襟足〈30分〉': 30,
+            '背中(キャミソールライン)〈30分〉': 30,
+            '背中(腰まで)〈30分〉': 30,
+            'デコルテ〈30分〉': 30,
+            '腕〈30分〉': 30,
+            '保湿パック〈30分〉': 30,
+            'ベーシックマッサージ(パック付き)〈30分〉': 30,
+            'リラックスマッサージの(パック付き)〈30分〉': 30,
+            '美白パック〈30分〉': 30
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '【ご新規様】デザインキープラッシュ80本~100本': 90,
-            '【ご新規様】デザインキープラッシュ120本~140本': 120,
-            '【再来】デザインキープラッシュ80本、100本、120本リペア': 90,
-            '【再来】デザインキープラッシュ140本リペア': 120,
-            '下まつ毛エクステ': 30,
-            '【ご新規様】ラッシュリフト上のみをご希望の方': 60,
-            '【ご新規様】ラッシュリフト上下のみをご希望の方': 90,
-            '【再来】ラッシュリフト上のみをご希望の方': 60,
-            '【再来】ラッシュリフト上下のみをご希望の方': 90,
-            '【ご新規様】ラッシュリフト&ハリウッドブロウリフト': 90,
-            '【再来】ラッシュリフト&ハリウッドブロウリフト': 90,
-            '【ご新規様】ラッシュリフト上下&ハリウッドブロウリフト': 120,
-            '【再来】ラッシュリフト上下&ハリウッドブロウリフト': 120,
-            '【ご新規様】ハリウッドブロウリフト': 60,
-            '【再来】ハリウッドブロウリフト': 60,
-            '【ご新規様】ラッシュリフト &ハリウッドブロウリフト': 90,
-            '【再来】ラッシュリフト &ハリウッドブロウリフト': 90,
-            '【ご新規様】ラッシュリフト上下&ハリウッドブロウリフト': 120,
-            '【再来】ラッシュリフト上下&ハリウッドブロウリフト': 120,
-            'フェイシャルワックス': 60,
-            '部分フェイシャルワックス': 30
+            'スピードコース〈90分〉': 0
         };
 
 
@@ -492,9 +489,13 @@
         <hr>
         <p>${selectedSymptomText}</p>
         <hr>
+        <p>${irradiationsText}</p>
+        <hr>
         <p>${totalTimeText}</p>
         <hr>
         <p>${selectedDateText}</p>
+        <hr>
+        <p>${totalAmountText}</p>
         <hr>
     `;
         }
@@ -723,11 +724,6 @@
         return;
     }
 
-    if (!formData.phone) {
-        alert('電話番号を入力してください。');
-        return;
-    }
-
     if (!formData.selectedSymptom) {
         alert('メニューを選択してください。');
         return;
@@ -741,7 +737,7 @@
     // LINEトークにメッセージを送信
     liff.sendMessages([{
         type: 'text',
-        text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+        text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
     }]).then(() => {
         /* メッセージ送信成功時の処理 */
         alert('当日キャンセルは無いようにお願いいたします。');
@@ -773,7 +769,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbzF65hGOJq-tyIltTFneQjBzjRvYlvMBbAcMMbqeiN3CiXoZMsORKssJqpcUdxO4YPxMQ/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbwCxnJaxGZ46c3TnnesuZcD_zuxuVoSHoDHo5MxkRzChcK5vZDwBs4HstzkXO-KLyuDYA/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -806,10 +802,11 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-                '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
-                '12:00', '12:30', '13:00', '13:30',
-                '14:00', '14:30', '15:00', '15:30',
-                '16:00', '16:30'
+                '10:00', '11:00',
+                '12:00', '13:00',
+                '14:00', '15:00',
+                '16:00', '17:00',
+                '18:00'
             ];
 
             if (table.rows.length === 0) {
@@ -886,12 +883,19 @@ if (slotEnd.getDate() !== slotStart.getDate()) {
     continue;
 }
 
+        // 17:30を✕に設定する条件を追加
+        if (slotStart.getHours() === 17 && slotStart.getMinutes() === 30) {
+            cell.textContent = '✕';
+            cell.classList.add('unavailable');
+            continue;
+        }
+
 // 18時以降に終了する予約を不可にする (17:30は可)
-if (slotEnd.getHours() === 16 && slotEnd.getMinutes() > 30) {
+if (slotEnd.getHours() === 18 && slotEnd.getMinutes() > 0) {
     cell.textContent = '✕';
     cell.classList.add('unavailable');
     continue;
-} else if (slotEnd.getHours() > 16) {
+} else if (slotEnd.getHours() > 18) {
     cell.textContent = '✕';
     cell.classList.add('unavailable');
     continue;
@@ -940,8 +944,8 @@ if (slotStart < now) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
-                    // 日曜日で、営業日ではない場合
-                    else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
+                    // 火曜日で、営業日ではない場合
+                    else if (slotStart.getDay() === 2 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
