--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
         <div id="set" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ブライダルコース◆</span>
+                <span class="highlight-text">◆セットメニュー◆</span>
             </div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">オーガニックカラー＋カット<br>（ケアトリートメント・スタイリング込）</button>
@@ -311,50 +311,73 @@
             </div>
         </div>
 
-        <div id="female" class="menu-section">
+        <div id="color" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆シェービングコース◆</span>
+                <span class="highlight-text">◆カラーメニュー◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">リラックスコース〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ベーシックコース〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">スピードコース〈90分〉</button>
-            </div>
-            <div class="highlight-background">
-                <span class="highlight-text">シェービングコース：オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈30分〉</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)〈30分〉</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈30分〉</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕〈30分〉</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈30分〉</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">オーガニックカラー<br>（ケアトリートメント・アルカリ除去・褪色防止トリートメント付</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">ホイルワーク</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">ヘアマニキュア（イージーブロウ付き）</button>
             </div>
         </div>
 
-        <div id="whitening" class="menu-section">
+        <div id="perm" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆マッサージコース◆</span>
+                <span class="highlight-text">◆パーマメニュー◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">リラックスマッサージ〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">ベーシックマッサージ〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">パーマ（ケアトリートメント・カット・スタイリング込み</button>
             </div>
+        </div>
+
+        <div id="Sukumo" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">マッサージコース：オプション</span>
+                <span class="highlight-text">◆宿毛矯正メニュー◆</span>
             </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">襟足〈30分〉</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">背中</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">背中(腰まで)〈30分〉</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">デコルテ〈30分〉</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">腕〈30分〉</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">保湿パック〈30分〉</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)" data-price="15000">美白パック〈30分〉</button>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">ソフトストレート</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">縮毛矯正<br>(ケアトリートメント・カット込み)</button>
+            </div>
+        </div>
+
+        <div id="treatment" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆トリートメントメニュー◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">髪質改善トリートメント 3STEPS</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">髪質改善トリートメント 4STEPS</button>
+            </div>
+        </div>
+
+        <div id="cut" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆カットメニュー◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">大人カット<br>(1シャンプー・ブロー・クイックスパ付)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">高校生カット<br>(ブロー・クイックスパ付)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">中学生カット<br>(ブロー・クイックスパ付)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">幼・小学生カット<br>(ブロー・クイックスパ付)</button>
+            </div>
+        </div>
+
+        <div id="headspa" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆ヘッドスパ◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">オーガニッククリームスパ<br>(ドライ・肩マッサージ込)</button>
+            </div>
+        </div>
+
+        <div id="shampoo" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆シャンプー・ブロウ◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">シャンプー(クイックスパ込)</button>
             </div>
         </div>
 
@@ -447,7 +470,22 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'スピードコース〈90分〉': 0
+            'オーガニックカラー＋カット（ケアトリートメント・スタイリング込）': 180,
+            'オーガニックカラー＋カット＋髪質改善4stepトリートメント（ケアトリートメント・スタイリング込）': 210,
+            'オーガニックカラー（ケアトリートメント・アルカリ除去・褪色防止トリートメント付': 90,
+            'ホイルワーク': 60,
+            'ヘアマニキュア（イージーブロウ付き）': 60,
+            'パーマ（ケアトリートメント・カット・スタイリング込み': 150,
+            'ソフトストレート': 150,
+            '縮毛矯正(ケアトリートメント・カット込み)': 240,
+            '髪質改善トリートメント 3STEPS': 15,
+            '髪質改善トリートメント 4STEPS': 20,
+            '大人カット(1シャンプー・ブロー・クイックスパ付)': 60,
+            '高校生カット(ブロー・クイックスパ付)': 45,
+            '中学生カット(ブロー・クイックスパ付)': 45,
+            '幼・小学生カット(ブロー・クイックスパ付)': 45,
+            'オーガニッククリームスパ(ドライ・肩マッサージ込)': 40,
+            'シャンプー(クイックスパ込)': 30
         };
 
 
@@ -489,13 +527,9 @@
         <hr>
         <p>${selectedSymptomText}</p>
         <hr>
-        <p>${irradiationsText}</p>
-        <hr>
         <p>${totalTimeText}</p>
         <hr>
         <p>${selectedDateText}</p>
-        <hr>
-        <p>${totalAmountText}</p>
         <hr>
     `;
         }
